Adding support for PageIndex
